# SlicerImageAugmenter

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
ImageAugmentator/: CMakeLists.txt  ImageAugmentator.py
ImageAugmentator/ImageAugmentatorLib/: ImageAugmentatorCrop.py  ImageAugmentatorDataset.py  ImageAugmentatorIntensity.py  ImageAugmentatorSpatial.py  ImageAugmentatorTransformControllerInterface.py  ImageAugmentatorTransformationParser.py  ImageAugmentatorUtils.py  ImageAugmentatorValidator.py
ImageAugmentator/Resources/UI/: ImageAugmentator.ui
ImageAugmenter/: CMakeLists.txt  ImageAugmenter.py  ruff.toml
ImageAugmenter/ImageAugmenterLib/: ImageAugmenterCrop.py  ImageAugmenterDataset.py  ImageAugmenterIntensity.py  ImageAugmenterSpatial.py  ImageAugmenterTransformControllerInterface.py  ImageAugmenterTransformationParser.py  ImageAugmenterUIUtils.py  ImageAugmenterUtils.py  ImageAugmenterValidator.py
ImageAugmenter/ImageAugmenterLib/UI/: ImageAugmenterPreviewDialog.py  ImageAugmenterUIUtils.py
ImageAugmenter/Resources/Icons/: ImageAugmenter.xcf
ImageAugmenter/Resources/UI/: ImageAugmenter.ui
SlicerAugmentator/: CMakeLists.txt  SlicerAugmentator.py
SlicerAugmentator/Resources/UI/: SlicerAugmentator.ui
SlicerAugmentator/SlicerAugmentator/: CMakeLists.txt
SlicerAugmentator/SlicerAugmentator/SlicerAugmentator/: CMakeLists.txt  SlicerAugmentator.py
SlicerAugmentator/SlicerAugmentator/SlicerAugmentator/Resources/UI/: SlicerAugmentator.ui
SlicerAugmentator/SlicerAugmentator/SlicerAugmentator/SlicerAugmentatorLib/: SlicerAugmentatorDataset.py  TransformationParser.py
SlicerAugmentator/SlicerAugmentatorLib/: SlicerAugmentatorCrop.py  SlicerAugmentatorDataset.py  SlicerAugmentatorIntensity.py  SlicerAugmentatorSpatial.py  SlicerAugmentatorTransformControllerInterface.py  SlicerAugmentatorTransformationParser.py  SlicerAugmentatorUtils.py  SlicerAugmentatorValidator.py  TransformationParser.py  test.ipynb
docs/: changelog.md  developers.md  examples.md  index.md  tutorial.md
